# docx2md

./: .gitignore  LICENSE  MANIFEST.in  README-jp.md  README.md  README.rst  converter.py  docx2md.py  docxfile.py  docxmedia.py  docxresources.py  jp-README.md  mediasaver.py  pavement.py  pyproject.toml  setup.py
docx2md/: __init__.py  __main__.py  converter.py  docxmedia.py
docx2md.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example/: example.docx
example/example/: README.md
src/docx2md/: __init__.py  __main__.py  convert.py  converter.py  docxfile.py  docxmedia.py  utils.py
test/data/: table.docx
test/data/heading/: .README.md.un~
tests/: test_docxfile.py  test_docxmedia.py  test_drawing.py  test_function.py  test_heading.py  test_list.py  test_media.py  test_paragraph.py  test_table.py
tests/data/: heading.docx  image.docx  list.docx  paragraph.docx
tests/data/heading/: README.md
tests/data/image/: README.md
tests/data/list/: README.md
tests/data/paragraph/: README.md
tests/data/table/: README.md
